Resolved navbar awkwardness on smaller screens.

--- a/shop/static/shop/base.css
+++ b/shop/static/shop/base.css
@@ -120,3 +120,10 @@ body {
 .auth-link:hover {
     text-decoration: none;
 }
+
+
+@media(max-width: 800px) {
+    .line-breaker {
+        width: 100%;
+    }
+}
